[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["konoha <konohayuya1222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
